name: zyflex
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: GPL-3
license-file: "LICENSE"
data-dir: ""
 
executable zyflex
    build-depends: SDL2 -any, base -any, random -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Draw Coloring
    ghc-options: -Wall
